<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.jikoo</groupId>
  <artifactId>regionerator</artifactId>
  <name>Regionerator</name>
  <version>2.4.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>24.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.19.3-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jikoo</groupId>
      <artifactId>planarwrappers</artifactId>
      <scope>compile</scope>
      <version>3.0.0</version>
    </dependency>
    <!-- Plugin hook dependencies -->
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-core</artifactId>
      <version>7.2.13</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-bukkit</artifactId>
      <version>7.2.13</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-core</artifactId>
      <version>7.0.7</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-bukkit</artifactId>
      <version>7.0.5</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>br.net.fabiozumbi12.RedProtect</groupId>
      <artifactId>RedProtect-Core</artifactId>
      <version>7.7.3</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>br.net.fabiozumbi12.RedProtect</groupId>
      <artifactId>RedProtect-Spigot</artifactId>
      <version>7.7.3</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- JitPack -->
    <dependency>
      <groupId>com.github.cjburkey01</groupId>
      <artifactId>ClaimChunk</artifactId>
      <version>0.0.22</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.angeschossen</groupId>
      <artifactId>LandsAPI</artifactId>
      <version>6.28.5</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.bloodmc</groupId>
      <artifactId>GriefDefenderAPI</artifactId>
      <version>33bd795ad4</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.TechFortress</groupId>
      <artifactId>GriefPrevention</artifactId>
      <version>16.18</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.elBukkit</groupId>
      <artifactId>PreciousStones</artifactId>
      <version>1.17.2</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.TownyAdvanced</groupId>
      <artifactId>Towny</artifactId>
      <version>0.98.6.3</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>sk89q-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>redprotect-repo</id>
      <url>https://raw.githubusercontent.com/FabioZumbi12/RedProtect/mvn-repo/</url>
    </repository>
  </repositories>

  <build>
    <finalName>${project.name}</finalName>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.yml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/precompiled_hooks</directory>
        <includes>
          <include>*Hook.class</include>
        </includes>
        <targetPath>com/github/jikoo/regionerator/hooks</targetPath>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.4.1</version>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <configuration>
          <relocations>
            <!-- Relocate Coords utility in case an external dependent hook used it. -->
            <relocation>
              <pattern>com.github.jikoo.planarwrappers.util.Coords</pattern>
              <shadedPattern>com.github.jikoo.regionerator.Coords</shadedPattern>
            </relocation>
            <relocation>
              <pattern>com.github.jikoo.planarwrappers</pattern>
              <shadedPattern>com.github.jikoo.regionerator.planarwrappers</shadedPattern>
            </relocation>
          </relocations>
          <filters>
            <filter>
              <artifact>com.github.jikoo:planarwrappers</artifact>
              <!--
                ~ Unfortunately, the minimizeJar option actually breaks build.
                ~ As a (hopefully temporary) workaround, explicitly declare classes used.
                ~ Ideally in the future this can be changed to an include of
                ~ com/github/jikoo/planarwrappers/** with minimizeJar set true.
                ~ Watch MSHADE-366 for a fix.
               -->
              <includes>
                <include>com/github/jikoo/planarwrappers/util/Coords.class</include>
                <include>com/github/jikoo/planarwrappers/tuple/Pair.class</include>
                <include>com/github/jikoo/planarwrappers/function/ThrowingTriFunction.class</include>
              </includes>
            </filter>
          </filters>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
